# ganim

./: .gitignore  .gitpod-init.sh  .gitpod.Dockerfile  .gitpod.yml  DEVELOPING.md  README.md  devbox.json  ganim.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: checks.yml  release-tag-slsa3.yml
src/: releaser.py
src/ganim/: __init__.py  app.py  cli.py  structures.py  utils.py  widgets.py
