[tool.poetry]
name = "ganim"
version = "0.0.1"
description = "Animating the history of a file using Git."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "ganim.py" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
]
repository = "https://github.com/markjoshwel/ganim"
keywords = ["git", "file", "history", "animation", "utility"]
readme = "README.md"

[tool.black]
line-length = 90

[tool.poetry.scripts]
ganim = 'ganim:main'

[tool.poetry.dependencies]
python = "^3.7.0"
textual = "^0.1.17"
PyDriller = "^2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
