[tool.poetry]
name = "ganim"
version = "0.1.0"
description = "Animating a files history using Git."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "ganim", from = "src" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
]
repository = "https://github.com/markjoshwel/ganim"
keywords = ["git", "file", "history", "animation", "utility"]
readme = "README.md"
include = ["UNLICENSE"]

[tool.black]
line-length = 90

[tool.poetry.scripts]
ganim = 'ganim.cli:run'

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.1.17"
PyDriller = "^2.1"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"

[tool.poetry.extras]
uvloop = ["uvloop"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
