[tool.poetry]
name = "ganim"
version = "0.0.2"
description = "animating a file's history using git."
authors = ["Mark Joshwel <mark@joshwel.co>"]
license = "Unlicense"
packages = [
    { include = "ganim", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "License :: Public Domain",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Topic :: Utilities",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
repository = "https://github.com/markjoshwel/ganim"
keywords = ["git", "file", "history", "animation", "utility"]
readme = "README.md"
include = ["UNLICENSE"]

[tool.black]
line-length = 90

[tool.poetry.scripts]
ganim = 'ganim.cli:run'

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.28.1"
pygit2 = "^1.12.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
black = "^23.3.0"
isort = "^5.12.0"
uvloop = "^0.17.0"
semver = "^3.0.1"
tomlkit = "^0.11.8"
ziglang = "^0.10.1.post1"

[tool.poetry.extras]
uvloop = ["uvloop"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
